--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
-apply plugin: 'eclipse'
 apply plugin: 'war'
-apply plugin: 'eclipse-wtp'
+apply plugin: 'idea'
+
+buildDir = 'build'
+
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+
+sourceCompatibility=javaVersion
+targetCompatibility=javaVersion
 
 dependencies {
     compile "org.springframework:spring-webmvc:$springVersion"
@@ -9,7 +15,7 @@ dependencies {
     compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
     compile "org.apache.commons:commons-lang3:$commonsLangVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-    
+
     compile "javax.servlet:jstl:$jstlVersion"
     providedCompile "javax.servlet:javax.servlet-api:$servletApiVersion"
     providedCompile "javax.servlet.jsp:jsp-api:$jspApiVersion"
@@ -19,6 +25,11 @@ dependencies {
     testCompile "org.springframework:spring-test:$springVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
     testCompile "org.hamcrest:hamcrest-library:$hamcrestVersion"
+
+    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
 
 repositories {
@@ -35,12 +46,4 @@ task wrapper(type: Wrapper) {
 
 war {
         baseName = 'spittr'
-}
-
-eclipse {
-        wtp {
-                component {
-                        contextPath = 'spittr'
-                }
-        }
 }
